--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=80
+spring.sql.init.encoding=UTF-8
+spring.datasource.url=jdbc:h2:mem:TrumpGame
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled:true
+logging.level.root=INFO
